testsuite/tests/properties/invalidation_during_mmz/extensions/src/libfoolang-implementation-extensions.ads
package Libfoolang.Implementation.Extensions is

   function Example_P_Fetch_Example_Unit
     (Node : Bare_Example) return Internal_Unit;

end Libfoolang.Implementation.Extensions;
